<resources>
    <string name="app_name">Morra</string>

    <string name="welcome_msg">Welcome,</string>
    <string name="start_btn">Start Game</string>
    <string name="history_btn">View History</string>
    <string name="edit_info_btn">Edit Info</string>
    <string name="about_btn">About</string>
    <string name="quit_btn">Quit</string>

    <string name="welcome_newplayer_msg">Welcome, New Player!</string>
    <string name="registration_msg">Please Register First</string>
    <string name="reg_player_name">Enter Your Name</string>
    <string name="reg_dob">Enter Your Date of Birth</string>
    <string name="reg_phone">Enter Your Phone Number</string>
    <string name="reg_email">Enter Your Email Address</string>
    <string name="reg_register">Register</string>
    <string name="reg_cancel">Cancel</string>

    <string name="update_info_msg">Update Your Info</string>
    <string name="update_msg">Update Info</string>
    <string name="delete_msg">Delete Account</string>

    <string name="about_msg">About</string>
    <string name="credit_flag1">Icon made by Freepik</string>
    <string name="credit_flag2">www.flaticon.com</string>
    <string name="credit_text1">Text designs using</string>
    <string name="credit_text2">flamingtext.com</string>
    <string name="credit_logo1">Logo design using</string>
    <string name="credit_logo2">github.com/romannurik</string>
    <string name="credit_icon1">Icons from</string>
    <string name="credit_icon2">material.io/tools/icons</string>
    <string name="credit_music1">Music from 鬼ごっこ！</string>

    <string-array name="country_list">
        <item>Honk Kong</item>
        <item>China</item>
        <item>Japan</item>
        <item>USA</item>
        <item>UK</item>
    </string-array>
</resources>
